# pipenv-repro

./: .gitignore  README.md
my-app-file-dep/: Pipfile
my-app-gitssh-dep/: Pipfile  main.py
namespace-library-file/: pyproject.toml  setup.py
namespace-library-gitssh/: pyproject.toml
namespace-utils/: pyproject.toml
namespace-utils/namespace/utils/: __init__.py
