[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "namespace-utils"
description = "Re-usable package dependency"
version = "1.0.0"
authors = [{ name = "Author", email = "arpin.alexandre@gmail.com" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9"

[project.urls]
"Source" = "https://github.com/AlexandreArpin/pipenv-repro"